Fix header logo spacing

--- a/blocks/header/alt-0-nav.css
+++ b/blocks/header/alt-0-nav.css
@@ -23,7 +23,6 @@ header.header-wrapper {
     max-width: var(--section-width);
 
     & .logo {
-      padding: 1rem 0;
       width: 50%;
 
       & a {
